style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    height: 100vh;
    font-family: Roboto, sans-serif;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
body > * {
    padding: 0px 200px;
}

.navbar {
    background-color: #1F2937;
    color: #ffffff;
    display: flex;
    align-items: center;
    gap: 20px;
}
h1 {
    margin-right: auto;
}

.top {
    display: flex;
    align-items: center;
    background-color: #1F2937;
    color: #ffffff;
    padding: 100px 200px;
    gap: 50px;
    align-items: stretch;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    max-width: 400px;
}
.content h2 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    margin: 0;
    text-align: left;
}
.content p {
    font-size: 18px;
    color: #E5E7EB;
}
h2 {
    font-size: 36px;
    font-weight: 900;
    margin: 0;
    text-align: center;
    margin-top: 50px;
}
button {
    max-width: fit-content;
}

.img {
    background-color: #686464;
    flex-basis: 600px;
    padding: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
}
.mid {
    display: flex;
    gap: 50px;
    justify-content: center;
    margin: 50px
}
.randominfo {
    display: flex;
    flex-direction: column;
    max-width: 100px;
    text-align: center;
}
.randominfo div {
    flex-basis: 100px;
    /* Where is border */
    border-radius: 10%;
    border: solid;
    border-width: 3px;
    border-color: #3882f6;
    min-width: 100px;
}

.quote {
    display: flex;
    flex-direction: column;
    background-color: #E5E7EB;
    justify-content: center;
    padding: 100px 350px;
    gap: 10px;
}
.quote p {
    font-size: 36px;
    font-weight: 100;
    font-style: italic;
    color: #1F2937;
    margin: 0;
}
.quote h3{
    align-self: flex-end;
    margin: 0;
}

.action {
    display: flex;
    flex-wrap: wrap;
    background-color: #3882f6;
    align-items: center;
    justify-content: space-around;
    margin: 60px 190px;
    padding: 10px;
    border-radius: 8px;
}

.footer {
    display: flex;
    justify-content: center;
    background-color: #1F2937;
    color: #ffffff;
    padding: 10px;
}

button {
    padding: 8px 20px;
    border-radius: 5px;
    background-color: #3882f6;
    color: #E5E7EB;
    border: none;
    font-weight: 700;
}

.action button {
    border: solid;
}

